# GetterBeam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pull_request_build_check.yml  pull_request_check.yml
Scripts/: build.sh  build_test.sh  check_style.sh  ut_incremental_check.py  ut_incremental_coverage_report.template
include/: GetterBeam.h
src/: GetterBeam.cpp
src/Global/: GBTypedef.h
src/Memory/: MemoryUtils.cpp  MemoryUtils.h  MemoryUtils_Test.cpp
